--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>HiobsPost</groupId>
 	<artifactId>HiobsClient</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2</version>
 	<name>HiobsClient</name>
 	<description>hiobspost</description>
 
@@ -26,18 +26,23 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<version>3.4.0-M1</version>
+			<version>3.4.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<version>3.4.0-M1</version>
+			<version>3.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-			<version>3.4.0-M1</version>
+			<version>3.4.0</version>
 		</dependency>
 
 
@@ -45,19 +50,27 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-messaging</artifactId>
-			<version>6.2.0-M7</version>
+			<version>6.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-websocket</artifactId>
-			<version>6.2.0-M7</version>
+			<version>6.2.0</version>
 		</dependency>
+
+		<!-- json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20240303</version>
+		</dependency>
+
 
 		<!-- H2 Database + @Entity: import jakarta.persistence.Entity;(jpa) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>3.3.4</version>
+			<version>3.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -69,12 +82,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-maven-plugin</artifactId>
-			<version>3.4.0-M1</version>
+			<version>3.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-resources-plugin</artifactId>
-			<version>3.3.1</version>
+			<version>4.0.0-beta-1</version>
 		</dependency>
 	</dependencies>
 
