--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,8 +32,9 @@ spring.datasource.password=
 # = Hibernate H2 Dialect
 #==========================================================
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view = false
 spring.jpa.show-sql=false
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 # =========================================================
