--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,8 @@ spring.thymeleaf.suffix=.html
 
 # =========================================================
 # = Connect H2 Database
+#   ./ = erstellt den Datenbank in Project Ordner
+#   ~/ = erstellt den Datenbank in User Ordner auf PC
 #==========================================================
 spring.datasource.url=jdbc:h2:file:./h2database/hiobsClient
 #spring.datasource.url=jdbc:h2:file:~/h2database/bote
